# c_iz2

./: CMakeLists.txt  Makefile  README.md  coverage.info  main.c
.github/workflows/: ci.yml
multiproc_sum/: CMakeLists.txt  diag_sum.c  diag_sum.h
single_sum/: CMakeLists.txt  diag_sum.c  diag_sum.h
tests/: CMakeLists.txt  test.cpp
